// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DOM snapshots SLDSProgressBar Color 1`] = `
<div
  className="slds-p-around_medium"
>
  <div>
    <span>
      Color: success
    </span>
    <div
      id="progress-bar-success"
      style={
        Object {
          "height": "100%",
        }
      }
    >
      
      <div
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow={75}
        aria-valuetext="Progress: 75%"
        className="slds-progress-bar"
        role="progressbar"
      >
        <span
          className="slds-progress-bar__value slds-progress-bar__value_success"
          style={
            Object {
              "width": "75%",
            }
          }
        >
          <span
            className="slds-assistive-text"
          >
            Progress: 
            75%
          </span>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`DOM snapshots SLDSProgressBar Default 1`] = `
<div
  className="slds-p-around_medium"
>
  <div>
    <div
      id="progress-bar"
      style={
        Object {
          "height": "100%",
        }
      }
    >
      
      <div
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow={75}
        aria-valuetext="Progress: 75%"
        className="slds-progress-bar"
        role="progressbar"
      >
        <span
          className="slds-progress-bar__value"
          style={
            Object {
              "width": "75%",
            }
          }
        >
          <span
            className="slds-assistive-text"
          >
            Progress: 
            75%
          </span>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`DOM snapshots SLDSProgressBar Descriptive 1`] = `
<div
  className="slds-p-around_medium"
>
  <div>
    <div
      id="setup-progress-bar"
      style={
        Object {
          "height": "100%",
        }
      }
    >
      <div
        className="slds-grid slds-grid_align-spread slds-p-bottom_x-small"
        id="progress-bar-label-setup-progress-bar"
      >
        <span>
          Einstein Setup Assistant
        </span>
        <span>
          <strong>
            90
            % 
            Complete
          </strong>
        </span>
      </div>
      <div
        aria-labelledby="progress-bar-label-setup-progress-bar"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow={90}
        aria-valuetext="Progress: 90%"
        className="slds-progress-bar"
        role="progressbar"
      >
        <span
          className="slds-progress-bar__value"
          style={
            Object {
              "width": "90%",
            }
          }
        >
          <span
            className="slds-assistive-text"
          >
            Progress: 
            90%
          </span>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`DOM snapshots SLDSProgressBar Radius 1`] = `
<div
  className="slds-p-around_medium"
>
  <div>
    <span>
      Radius: circular
    </span>
    <div
      id="progress-bar-circular"
      style={
        Object {
          "height": "100%",
        }
      }
    >
      
      <div
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow={75}
        aria-valuetext="Progress: 75%"
        className="slds-progress-bar slds-progress-bar_circular"
        role="progressbar"
      >
        <span
          className="slds-progress-bar__value"
          style={
            Object {
              "width": "75%",
            }
          }
        >
          <span
            className="slds-assistive-text"
          >
            Progress: 
            75%
          </span>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`DOM snapshots SLDSProgressBar Thickness 1`] = `
<div
  className="slds-p-around_medium"
>
  <div>
    <span>
      Thickness: x-small
    </span>
    <div
      id="progress-bar-x-small"
      style={
        Object {
          "height": "100%",
        }
      }
    >
      
      <div
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow={90}
        aria-valuetext="Progress: 90%"
        className="slds-progress-bar slds-progress-bar_x-small"
        role="progressbar"
      >
        <span
          className="slds-progress-bar__value"
          style={
            Object {
              "width": "90%",
            }
          }
        >
          <span
            className="slds-assistive-text"
          >
            Progress: 
            90%
          </span>
        </span>
      </div>
    </div>
    <hr />
    <span>
      Thickness: small
    </span>
    <div
      id="progress-bar-small"
      style={
        Object {
          "height": "100%",
        }
      }
    >
      
      <div
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow={75}
        aria-valuetext="Progress: 75%"
        className="slds-progress-bar slds-progress-bar_small"
        role="progressbar"
      >
        <span
          className="slds-progress-bar__value"
          style={
            Object {
              "width": "75%",
            }
          }
        >
          <span
            className="slds-assistive-text"
          >
            Progress: 
            75%
          </span>
        </span>
      </div>
    </div>
    <hr />
    <span>
      Thickness: medium
    </span>
    <div
      id="progress-bar-medium"
      style={
        Object {
          "height": "100%",
        }
      }
    >
      
      <div
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow={50}
        aria-valuetext="Progress: 50%"
        className="slds-progress-bar slds-progress-bar_medium"
        role="progressbar"
      >
        <span
          className="slds-progress-bar__value"
          style={
            Object {
              "width": "50%",
            }
          }
        >
          <span
            className="slds-assistive-text"
          >
            Progress: 
            50%
          </span>
        </span>
      </div>
    </div>
    <hr />
    <span>
      Thickness: large
    </span>
    <div
      id="progress-bar-large"
      style={
        Object {
          "height": "100%",
        }
      }
    >
      
      <div
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow={25}
        aria-valuetext="Progress: 25%"
        className="slds-progress-bar slds-progress-bar_large"
        role="progressbar"
      >
        <span
          className="slds-progress-bar__value"
          style={
            Object {
              "width": "25%",
            }
          }
        >
          <span
            className="slds-assistive-text"
          >
            Progress: 
            25%
          </span>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`DOM snapshots SLDSProgressBar Vertical 1`] = `
<div
  className="slds-p-around_medium"
>
  <div>
    <div
      id="progress-bar-vertical"
      style={
        Object {
          "height": "200px",
        }
      }
    >
      <div
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow={60}
        aria-valuetext="Progress: 60%"
        className="slds-progress-bar slds-progress-bar_vertical"
        role="progressbar"
      >
        <span
          className="slds-progress-bar__value"
          style={
            Object {
              "height": "60%",
            }
          }
        >
          <span
            className="slds-assistive-text"
          >
            Progress: 
            60%
          </span>
        </span>
      </div>
    </div>
  </div>
</div>
`;
